syntax="proto3";
option java_package = "org.serialization.protobuf.imported";
option java_multiple_files = true;
option java_outer_classname = "PhoneNumberBuf";
message PhoneNumber  {
    string number = 1;

    // 枚举示例
    enum PhoneType {
        MOBILE = 0;
        TELEPHONE = 1;
    }
    PhoneType type = 2;

}